// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > renders Slider unchanged 1`] = `
<div>
  <div
    class="memori-slider"
    style="--percentage: 50%; --percentage-number: 50;"
  >
    <div
      class="memori-slider__header"
    >
      <div
        class="memori-slider__value"
      >
        50
      </div>
    </div>
    <div
      class="memori-slider__track-container"
    >
      <div
        class="memori-slider__track"
      >
        <div
          class="memori-slider__track-fill-clip"
        >
          <div
            class="memori-slider__track-fill"
          />
        </div>
      </div>
      <div
        class="memori-slider__marks"
      >
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-label="Slider"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori-slider__thumb"
        role="slider"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider > renders Slider with different step unchanged 1`] = `
<div>
  <div
    class="memori-slider"
    style="--percentage: 50%; --percentage-number: 50;"
  >
    <div
      class="memori-slider__header"
    >
      <div
        class="memori-slider__value"
      >
        50
      </div>
    </div>
    <div
      class="memori-slider__track-container"
    >
      <div
        class="memori-slider__track"
      >
        <div
          class="memori-slider__track-fill-clip"
        >
          <div
            class="memori-slider__track-fill"
          />
        </div>
      </div>
      <div
        class="memori-slider__marks"
      >
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-label="Slider"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori-slider__thumb"
        role="slider"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider > renders Slider with disabled prop unchanged 1`] = `
<div>
  <div
    class="memori-slider memori-slider--disabled"
    style="--percentage: 50%; --percentage-number: 50;"
  >
    <div
      class="memori-slider__header"
    >
      <div
        class="memori-slider__value"
      >
        50
      </div>
    </div>
    <div
      class="memori-slider__track-container"
    >
      <div
        class="memori-slider__track"
      >
        <div
          class="memori-slider__track-fill-clip"
        >
          <div
            class="memori-slider__track-fill"
          />
        </div>
      </div>
      <div
        class="memori-slider__marks"
      >
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-label="Slider"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori-slider__thumb"
        role="slider"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`Slider > renders Slider with label prop unchanged 1`] = `
<div>
  <div
    class="memori-slider"
    style="--percentage: 50%; --percentage-number: 50;"
  >
    <div
      class="memori-slider__header"
    >
      <div
        class="memori-slider__label"
      >
        Test
      </div>
      <div
        class="memori-slider__value"
      >
        50
      </div>
    </div>
    <div
      class="memori-slider__track-container"
    >
      <div
        class="memori-slider__track"
      >
        <div
          class="memori-slider__track-fill-clip"
        >
          <div
            class="memori-slider__track-fill"
          />
        </div>
      </div>
      <div
        class="memori-slider__marks"
      >
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori-slider__mark"
        >
          <div
            class="memori-slider__mark-line"
          />
          <span
            class="memori-slider__mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-label="Test"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori-slider__thumb"
        role="slider"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
